# transaction-rs

./: CHANGELOG.md  Cargo.toml  README.md
transaction/: Cargo.toml  README.md
transaction-diesel/: Cargo.toml  README.md
transaction-diesel/examples/simple-crud/: Cargo.toml
transaction-diesel/examples/simple-crud-combinator/: .env  Cargo.toml  README.md  docker-compose.yml
transaction-diesel/examples/simple-crud-combinator/migrations/20170617072451_create_users/: down.sql  up.sql
transaction-diesel/examples/simple-crud/src/: db.rs  main.rs  model.rs
transaction-diesel/src/: lib.rs
transaction-stm/: Cargo.toml  README.md
transaction-stm/benches/: boxed_vs_branch.rs
transaction-stm/examples/: impl_struct.rs  simple.rs
transaction-stm/src/: lib.rs
transaction/src/: abort.rs  and_then.rs  branch.rs  branch3.rs  branch4.rs  err.rs  join.rs  join3.rs  join4.rs  join_all.rs  join_vec.rs  lazy.rs  lib.rs  loop_fn.rs  map.rs  map_err.rs  mdo.rs  ok.rs  or_else.rs  recover.rs  repeat.rs  result.rs  retry.rs  then.rs  try_abort.rs  try_recover.rs  with_ctx.rs
