[workspace]
members = [
        "transaction",
        "transaction-diesel",
        "transaction-stm",
        "transaction-diesel/examples/simple-crud",
        "transaction-diesel/examples/simple-crud-combinator"
        ]

[replace]
"transaction:0.2.1" = { path = "transaction" }
"transaction-diesel:0.2.0" = { path = "transaction-diesel" }