[package]
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
name = "transaction-diesel"
version = "0.2.0"
license = "MIT"
description = "transaction abstraction of diesel"
readme = "README.md"
documentation = "http://docs.rs/transaction-diesel/0.2.0/transaction-diesel/"
repository = "https://github.com/KeenS/transaction"
keywords = ["transaction", "diesel"]
categories = ["rust-patterns"]

[dependencies]
diesel = ">=0.12.0, <= 0.13"
transaction = "0.2.0"