[package]
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
name = "transaction-stm"
version = "0.2.0"
license = "MIT"
description = "transaction abstraction of stm"
readme = "README.md"
documentation = "http://docs.rs/transaction-stm/0.2.0/transaction-stm/"
repository = "https://github.com/KeenS/transaction-rs"
keywords = ["transaction", "stm"]
categories = ["rust-patterns", "concurrency"]

[dependencies]
stm = "0.2.4"
transaction = "0.2.0"