[package]
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
name = "simple-crud"
version = "0.1.0"

[dependencies]
dotenv = "0.10.0"
transaction = "0.1.0"
transaction-diesel = "0.1.0"

[dependencies.diesel]
features = ["postgres"]
version = "0.13.0"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.13.0"
